fixed bleed on beginning and end of week hover states

--- a/src/components/calcite-date-picker-day/calcite-date-picker-day.scss
+++ b/src/components/calcite-date-picker-day/calcite-date-picker-day.scss
@@ -12,6 +12,12 @@
   @apply flex-auto;
 }
 
+.day-wrapper {
+  @apply flex
+    flex-col
+    items-center;
+}
+
 .day {
   @apply flex
     rounded-full
@@ -323,6 +329,7 @@
 :host([range-hover]:first-child) .calcite--rtl .day-wrapper {
   border-top-right-radius: 45%;
   border-bottom-right-radius: 45%;
+  box-shadow: inset -4px 0px 0px 0px var(--calcite-ui-foreground-1);
 }
 
 :host([highlighted]:first-child) :not(.calcite--rtl) .day-wrapper,
@@ -331,4 +338,33 @@
 :host([range-hover]:last-child) .calcite--rtl .day-wrapper {
   border-top-left-radius: 45%;
   border-bottom-left-radius: 45%;
+  box-shadow: inset 4px 0px 0px 0px var(--calcite-ui-foreground-1);
+}
+
+:host([scale="s"][highlighted]:last-child) :not(.calcite--rtl) .day-wrapper,
+:host([scale="s"][range-hover]:last-child) :not(.calcite--rtl) .day-wrapper,
+:host([scale="s"][highlighted]:first-child) .calcite--rtl .day-wrapper,
+:host([scale="s"][range-hover]:first-child) .calcite--rtl .day-wrapper {
+  box-shadow: inset -1px 0px 0px 0px var(--calcite-ui-foreground-1);
+}
+
+:host([scale="s"][highlighted]:first-child) :not(.calcite--rtl) .day-wrapper,
+:host([scale="s"][range-hover]:first-child) :not(.calcite--rtl) .day-wrapper,
+:host([scale="s"][highlighted]:last-child) .calcite--rtl .day-wrapper,
+:host([scale="s"][range-hover]:last-child) .calcite--rtl .day-wrapper {
+  box-shadow: inset 1px 0px 0px 0px var(--calcite-ui-foreground-1);
+}
+
+:host([scale="l"][highlighted]:first-child) :not(.calcite--rtl) .day-wrapper,
+:host([scale="l"][range-hover]:first-child) :not(.calcite--rtl) .day-wrapper,
+:host([scale="l"][highlighted]:last-child) .calcite--rtl .day-wrapper,
+:host([scale="l"][range-hover]:last-child) .calcite--rtl .day-wrapper {
+  box-shadow: inset 6px 0px 0px 0px var(--calcite-ui-foreground-1);
+}
+
+:host([scale="l"][highlighted]:last-child) :not(.calcite--rtl) .day-wrapper,
+:host([scale="l"][range-hover]:last-child) :not(.calcite--rtl) .day-wrapper,
+:host([scale="l"][highlighted]:first-child) .calcite--rtl .day-wrapper,
+:host([scale="l"][range-hover]:first-child) .calcite--rtl .day-wrapper {
+  box-shadow: inset -6px 0px 0px 0px var(--calcite-ui-foreground-1);
 }
